tests/arith/arith.exp
Error: Arith.js:13
 13:   num(x+y); // error
           ^^^ string. This type is incompatible with the expected param type of
  4: function num(x:number) { }
                    ^^^^^^ number

Error: Arith.js:15
 15:   str(x+x); // error
           ^^^ number. This type is incompatible with the expected param type of
  6: function str(x:string) { }
                    ^^^^^^ string

Error: Arith.js:16
 16:   str(z+y); // error
           ^ Cannot add `z` and `y` because object literal [1] is incompatible with string [2].
  References:
   11:   var z = {};
                 ^^ [1]: object literal
   10:   var y = "...";
                 ^^^^^ [2]: string

Error: Arith.js:56
 56: str("foo" + true); // error
                 ^^^^ Cannot add `"foo"` and `true` because boolean [1] is incompatible with string [2].
  References:
   56: str("foo" + true); // error
                   ^^^^ [1]: boolean
   56: str("foo" + true); // error
           ^^^^^ [2]: string

Error: Arith.js:57
 57: str(true + "foo"); // error
         ^^^^ Cannot add `true` and `"foo"` because boolean [1] is incompatible with string [2].
  References:
   57: str(true + "foo"); // error
           ^^^^ [1]: boolean
   57: str(true + "foo"); // error
                  ^^^^^ [2]: string

Error: Arith.js:58
 58: str("foo" + null); // error
                 ^^^^ Cannot add `"foo"` and `null` because null [1] is incompatible with string [2].
  References:
   58: str("foo" + null); // error
                   ^^^^ [1]: null
   58: str("foo" + null); // error
           ^^^^^ [2]: string

Error: Arith.js:59
 59: str(null + "foo"); // error
         ^^^^ Cannot add `null` and `"foo"` because null [1] is incompatible with string [2].
  References:
   59: str(null + "foo"); // error
           ^^^^ [1]: null
   59: str(null + "foo"); // error
                  ^^^^^ [2]: string

Error: Arith.js:60
 60: str("foo" + undefined); // error
                 ^^^^^^^^^ Cannot add `"foo"` and `undefined` because undefined [1] is incompatible with string [2].
  References:
   13: declare var undefined: void;
                              ^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:13
   60: str("foo" + undefined); // error
           ^^^^^ [2]: string

Error: Arith.js:61
 61: str(undefined + "foo"); // error
         ^^^^^^^^^ Cannot add `undefined` and `"foo"` because undefined [1] is incompatible with string [2].
  References:
   13: declare var undefined: void;
                              ^^^^ [1]: undefined. See lib: <BUILTINS>/core.js:13
   61: str(undefined + "foo"); // error
                       ^^^^^ [2]: string

Error: Arith.js:65
 65:     (x + y); // error
          ^ mixed. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: Arith.js:66
 66:     (x + 0); // error
          ^ mixed. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: Arith.js:67
 67:     (0 + x); // error
              ^ mixed. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: Arith.js:68
 68:     (x + ""); // error
          ^ mixed. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: Arith.js:69
 69:     ("" + x); // error
               ^ mixed. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: Arith.js:70
 70:     (x + {}); // error
          ^ mixed. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: Arith.js:71
 71:     ({} + x); // error
               ^ mixed. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: Arith.js:78
 78:     ((1 + {}): number); // error: object !~> number
               ^^ Cannot add `1` and object literal because object literal [1] is incompatible with number [2].
  References:
   78:     ((1 + {}): number); // error: object !~> number
                 ^^ [1]: object literal
   78:     ((1 + {}): number); // error: object !~> number
             ^ [2]: number

Error: Arith.js:79
 79:     (({} + 1): number); // error: object !~> number
           ^^ Cannot add object literal and `1` because object literal [1] is incompatible with number [2].
  References:
   79:     (({} + 1): number); // error: object !~> number
             ^^ [1]: object literal
   79:     (({} + 1): number); // error: object !~> number
                  ^ [2]: number

Error: Arith.js:80
 80:     (("1" + {}): string); // error: object !~> string
                 ^^ Cannot add `"1"` and object literal because object literal [1] is incompatible with string [2].
  References:
   80:     (("1" + {}): string); // error: object !~> string
                   ^^ [1]: object literal
   80:     (("1" + {}): string); // error: object !~> string
             ^^^ [2]: string

Error: Arith.js:81
 81:     (({} + "1"): string); // error: object !~> string
           ^^ Cannot add object literal and `"1"` because object literal [1] is incompatible with string [2].
  References:
   81:     (({} + "1"): string); // error: object !~> string
             ^^ [1]: object literal
   81:     (({} + "1"): string); // error: object !~> string
                  ^^^ [2]: string

Error: Arith.js:88
 88:     (x + z: empty); // error, string ~> empty
          ^^^^^ Cannot cast `x + z` to empty because string [1] is incompatible with empty [2].
  References:
   88:     (x + z: empty); // error, string ~> empty
            ^^^^^ [1]: string
   88:     (x + z: empty); // error, string ~> empty
                   ^^^^^ [2]: empty

Error: Arith.js:89
 89:     (z + x: empty); // error, string ~> empty
          ^^^^^ Cannot cast `z + x` to empty because string [1] is incompatible with empty [2].
  References:
   89:     (z + x: empty); // error, string ~> empty
            ^^^^^ [1]: string
   89:     (z + x: empty); // error, string ~> empty
                   ^^^^^ [2]: empty

Error: exponent.js:7
  7: y **= 2; // error
     ^ string. The operand of an arithmetic operation must be a number.

Error: exponent.js:7
  7: y **= 2; // error
     ^^^^^^^ Cannot assign number to `y` because number [1] is incompatible with string [2].
  References:
    7: y **= 2; // error
       ^^^^^^^ [1]: number
    6: let y: string = "123";
              ^^^^^^ [2]: string

Error: generic.js:3
  3: function f<A>(a: A): A { return a + a; } // error
                                     ^ A. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: generic.js:4
  4: function f<A,B>(a: A, b: B): A {return a + b; } // error
                                            ^ A. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: generic.js:5
  5: function f<A,B>(a: A, b: B): A {return b + a; } // error
                                            ^ B. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: generic.js:6
  6: function f<A,B>(a: A, b: B): B {return a + b; } // error
                                            ^ A. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: generic.js:7
  7: function f<A,B>(a: A, b: B): B {return b + a; } // error
                                            ^ B. This type cannot be used in an addition because it is unknown whether it behaves like a string or a number.

Error: mult.js:5
  5: num(null * 1);
         ^^^^ null. The operand of an arithmetic operation must be a number.

Error: mult.js:6
  6: num(1 * null);
             ^^^^ null. The operand of an arithmetic operation must be a number.

Error: mult.js:12
 12: y *= 2; // error
     ^ string. The operand of an arithmetic operation must be a number.

Error: mult.js:12
 12: y *= 2; // error
     ^^^^^^ Cannot assign number to `y` because number [1] is incompatible with string [2].
  References:
   12: y *= 2; // error
       ^^^^^^ [1]: number
   11: let y: string = "123";
              ^^^^^^ [2]: string

Error: relational.js:4
  4: (1 < "foo"); // error
      ^ number. This type cannot be compared to
  4: (1 < "foo"); // error
          ^^^^^ string

Error: relational.js:5
  5: ("foo" < 1); // error
      ^^^^^ string. This type cannot be compared to
  5: ("foo" < 1); // error
              ^ number

Error: relational.js:7
  7: (1 < {foo: 1}); // error
      ^ number. This type cannot be compared to
  7: (1 < {foo: 1}); // error
          ^^^^^^^^ object literal

Error: relational.js:8
  8: ({foo: 1} < 1); // error
      ^^^^^^^^ object literal. This type cannot be compared to
  8: ({foo: 1} < 1); // error
                 ^ number

Error: relational.js:9
  9: ({foo: 1} < {foo: 1}); // error
      ^^^^^^^^ object literal. This type cannot be compared to
  9: ({foo: 1} < {foo: 1}); // error
                 ^^^^^^^^ object literal

Error: relational.js:10
 10: ("foo" < {foo: 1}); // error
      ^^^^^ string. This type cannot be compared to
 10: ("foo" < {foo: 1}); // error
              ^^^^^^^^ object literal

Error: relational.js:11
 11: ({foo: 1} < "foo"); // error
      ^^^^^^^^ object literal. This type cannot be compared to
 11: ({foo: 1} < "foo"); // error
                 ^^^^^ string

Error: relational.js:14
 14: (1 < x); // 2 errors: null !~> number; undefined !~> number
      ^ number. This type cannot be compared to
 14: (1 < x); // 2 errors: null !~> number; undefined !~> number
          ^ null or undefined

Error: relational.js:15
 15: (x < 1); // 2 errors: null !~> number; undefined !~> number
      ^ null or undefined. This type cannot be compared to
 15: (x < 1); // 2 errors: null !~> number; undefined !~> number
          ^ number

Error: relational.js:17
 17: (null < null); // error
      ^^^^ null. This type cannot be compared to
 17: (null < null); // error
             ^^^^ null

Error: relational.js:18
 18: (undefined < null); // error
      ^^^^^^^^^ undefined. This type cannot be compared to
 18: (undefined < null); // error
                  ^^^^ null

Error: relational.js:19
 19: (null < undefined); // error
      ^^^^ null. This type cannot be compared to
 19: (null < undefined); // error
             ^^^^^^^^^ undefined

Error: relational.js:20
 20: (undefined < undefined); // error
      ^^^^^^^^^ undefined. This type cannot be compared to
 20: (undefined < undefined); // error
                  ^^^^^^^^^ undefined


Found 46 errors
